instances.tf
resource "aws_instance" "dev_server" {
  
}

resource "aws_instance" "emre" {
  
}
